# clever-roles

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md
.github/workflows/: docker-publish.yml  docker.yml  release.yml  test.yml
entity/: Cargo.toml
entity/src/: channel.rs  guild.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_guild.rs  m20220101_000002_create_channel_role.rs
src/: bot.rs  constants.rs  db.rs  logger.rs  main.rs  migration.rs  util.rs
src/commands/: mod.rs
src/commands/activation/: activate.rs  deactivate.rs  mod.rs
src/commands/info/: help.rs  list.rs  mod.rs
src/commands/watcher/: mod.rs  unwatch.rs  watch.rs
src/events/: mod.rs  on_channel_delete.rs  on_guild_delete.rs  on_ready.rs  on_voice_statce_update.rs
