[package]
name = "clever-roles"
repository = "https://github.com/peanutbother/clever-roles"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
poise = "0.5.0"
tokio = { version = "1.22.0", features = ["tokio-macros", "rt-multi-thread"] }
migration = { path = "./migration" }
entity = { path = "./entity" }
